# Debrief

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  schema.sql
backend/app/: fix_demo_data.py  main.py  seed_demo.py
backend/app/api/: auth.py  meetings.py  projects.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  meetings.py  projects.py
backend/app/services/: meeting_pipeline.py
backend/app/services/integrations/: google_calendar.py  jira.py  slack.py
backend/app/services/providers/: extraction.py  transcription.py
backend/tests/: test_heuristic_extraction.py  test_slack_integration.py
docs/: demo-transcripts.md
docs/api/: contracts.md
docs/architecture/: phase1.md  phase2.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ConfirmationModal.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: app.css
scripts/: check_cors.py  inspect_extract.py  jira_diagnostics.py  list_jira_projects.py  print_cors_settings.py  slack_smoke_test.py  smoke_check.py  start_demo.ps1  test_confirm_flow.py  test_integrations.py  test_jira_clara.py  test_jira_project_access.py  update_clara_email.py  update_data_platform_jira_setup.py
